@@ -30,7 +30,7 @@ MR_LOCK_FILE = /var/run/ispcp.lock
 
 CMD_AWK = /usr/bin/awk
 
-CMD_BZCAT = /bin/bzcat
+CMD_BZCAT = /usr/bin/bzcat
 
 CMD_BZIP = /usr/bin/bzip2
 
@@ -48,9 +48,9 @@ CMD_DU = /usr/bin/du
 
 CMD_ECHO = /bin/echo
 
-CMD_EGREP = /bin/egrep
+CMD_EGREP = /usr/bin/egrep
 
-CMD_GZCAT = /bin/zcat
+CMD_GZCAT = /usr/bin/zcat
 
 CMD_GZIP = /usr/bin/gzip
 
@@ -76,11 +76,11 @@ CMD_PS = /bin/ps
 
 CMD_RM = /bin/rm
 
-CMD_SED = /bin/sed
+CMD_SED = /usr/bin/sed
 
 CMD_SHELL = /usr/local/bin/bash
 
-CMD_TAR = /bin/tar
+CMD_TAR = /usr/bin/tar
 
 CMD_TOUCH = /usr/bin/touch
 
