@@ -23,7 +23,7 @@
           <td>
            <table width="453" border="0" cellpadding="0" cellspacing="1">
             <tr>
-             <td align="center" valign="middle" bgcolor="#FFFFFF"><strong><span class="message">&nbsp;{TR_MESSAGE}&nbsp;</span></strong></td>
+             <td align="center" valign="middle" bgcolor="#FFFFFF"><strong><span class="message">{TR_MESSAGE}</span></strong></td>
             </tr>
             <tr>
              <td align="right"><a class="login" href="index.php?admin=1" target="_self">{TR_ADMINLOGIN}</a></td>
