@@ -924,17 +924,17 @@ Subdomain mail = Subdomain-E-Mail
 Subdomain forward = E-Mail-Weiterleitung Subdomain
 Unknown type = Unbekannter Typ
 Welcome {USERNAME} to ispCP! = Willkommen {USERNAME} auf ispCP!
-\n\nHello {NAME}!\n\nA new ispCP account has been created for you.\nYour account information:\n\nUser type: {USERTYPE}\nUser name: {USERNAME}\nPassword: {PASSWORD}\n\nRemember to change your password often and the first time you login.\n\nYou can login right now at http://{BASE_SERVER_VHOST}\n\nBest wishes with ispCP!\nThe ispCP Team.\n\n = \n\nHallo {NAME}!\n\nEin neues ispCP-Konto wurde für Sie erstellt.\nIhre Kontozugangsdaten:\n\nBenutzertyp: {USERTYPE}\nBenutzername: {USERNAME}\nPassword: {PASSWORD}\n\nVergessen Sie nicht, Ihr Passwort nach dem ersten Login zu ändern.\n\nSie können sich nun über folgenden Link einloggen: http://{BASE_SERVER_VHOST}\n\nViel Spaß mit ispCP!\nDas ispCP-Team.\n\n
+\n\nHello {NAME}!\n\nA new ispCP account has been created for you.\nYour account information:\n\nUser type: {USERTYPE}\nUser name: {USERNAME}\nPassword: {PASSWORD}\n\nRemember to change your password often and the first time you login.\n\nYou can login right now at http://{BASE_SERVER_VHOST}\n\nBest wishes with ispCP!\nThe ispCP Team.\n\n = \n\nHallo {NAME}!\n\nEin neues ispCP-Konto wurde für Sie erstellt.\nIhre Kontozugangsdaten lauten:\n\nBenutzertyp: {USERTYPE}\nBenutzername: {USERNAME}\nPassword: {PASSWORD}\n\nVergessen Sie nicht, Ihr Passwort nach dem ersten Login zu ändern.\n\nSie können sich nun über den folgenden Link einloggen: http://{BASE_SERVER_VHOST}\n\nViel Spaß mit ispCP!\nDas ispCP-Team.\n\n
 Please activate your new ispCP password! = Bitte aktivieren Sie Ihren ispCP-Zugang!
-\n\nHello {NAME}!\nUse this link to activate your new ispCP password:\n\n{LINK}\n\nGood Luck with the ispCP System\nThe ispCP Team\n\n = \n\nHallo {NAME}!\nBenutzen Sie diesen Link um Ihr neues ispCP-Passwort zu aktivieren:\n\n{LINK}\n\nViel Erfolg mit dem ispCP-System!\nDas ispCP-Team.\n\n
+\n\nHello {NAME}!\nUse this link to activate your new ispCP password:\n\n{LINK}\n\nGood Luck with the ispCP System\nThe ispCP Team\n\n = \n\nHallo {NAME}!\n\nBenutzen Sie den folgenden Link um Ihr neues ispCP-Passwort zu aktivieren:\n\n{LINK}\n\nViel Erfolg mit dem ispCP-System!\nDas ispCP-Team.\n\n
 Your new ispCP login! = Ihr neuer ispCP-Zugang
 \n\nHello {NAME}!\n\nYour user name is: {USERNAME}\nYour password is: {PASSWORD}\n\nYou can login at http://{BASE_SERVER_VHOST}\n\nBest wishes with ispCP!\nThe ispCP Team\n\n = \n\nHallo {NAME}!\n\nIhr ispCP-Benutzername ist: {USERNAME}\nIhr ispCP-Passwort ist: {PASSWORD}\n\nSie können sich unter http://{BASE_SERVER_VHOST} anmelden.\n\nViel Erfolg mit dem ispCP-System!\nDas ispCP-Team.\n\n
 Confirmation for domain order {DOMAIN}! = Bestellbestätigung für Ihre Domain {DOMAIN}
-\n\nDear {NAME},\nThis is an automatic confirmation for the order of the domain:\n\n{DOMAIN}\n\nThank you for using ispCP services.\nThe ispCP Team\n\n = \n\nSehr geehrte(r) {NAME},\nDies ist eine automatische Bestellbestätigung für Ihre Domain\n\n{DOMAIN}\n\nVielen Dank, dass Sie den ispCP-Dienst benutzen.\nDas ispCP-Team\n\n
+\n\nDear {NAME},\nThis is an automatic confirmation for the order of the domain:\n\n{DOMAIN}\n\nThank you for using ispCP services.\nThe ispCP Team\n\n = \n\nSehr geehrte(r) {NAME},\n\nDies ist eine automatische Bestellbestätigung für Ihre Domain\n\n{DOMAIN}\n\nVielen Dank, dass Sie den ispCP-Dienst benutzen.\nDas ispCP-Team\n\n
 New alias order for {CUSTOMER}! = Neue Alias-Bestellung von {CUSTOMER}!
 \n\nDear {RESELLER},\nYour customer {CUSTOMER} is awaiting for the approval of his new alias:\n\n{ALIAS}\n\nOnce logged in, you can activate his new alias at\nhttp://{BASE_SERVER_VHOST}/reseller/domain_alias.php\n\nThank you for using ispCP services.\nThe ispCP Team\n\n = \n\nHallo {RESELLER},\nIhr Kunde {CUSTOMER} wartet auf die Freischaltung seines neuen Alias:\n\n{ALIAS}\n\nEinmal eingeloggt, können Sie den neuen Alias aktivieren \nhttp://{BASE_SERVER_VHOST}/reseller/domain_alias.php\n\nDas ispCP-Team\n\n
 Catchall account = Catch-All-Konto
-We are sorry, but the system is currently under maintenance.\nPlease try again later. = Bitte entschuldigen Sie, aber das System ist gerade im Wartungsmodus.\nBitte versuchen Sie es später wieder.
+We are sorry, but the system is currently under maintenance.\nPlease try again later. = Bitte entschuldigen Sie, aber das System ist gerade im Wartungsmodus.\nBitte versuchen Sie es später noch einmal.
 Could not get config from database = Konnte die Konfiguration nicht aus der Datenbank laden
 You have to wait %d seconds = Sie müssen noch %d Sekunden warten
 You have been blocked for %d minutes = Sie wurden für %d Minuten gesperrt
